@@ -104,10 +104,13 @@ void XMLAbelianGroupReader::initialChars(const std::string& chars) {
     if (group_) {
         std::list<std::string> tokens;
         if (basicTokenise(back_inserter(tokens), chars) > 0) {
-            Integer val;
-            for (const std::string& t : tokens)
-                if (valueOf(t, val))
-                    group_->addTorsion(val);
+            try {
+                for (const std::string& t : tokens)
+                    group_->addTorsion(Integer(t));
+            } catch (const regina::InvalidArgument&) {
+                // Unparseable.
+                group_.reset();
+            }
         }
     }
 }
